--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
 </head>
 <body>
 <div id="page">
-	<form class="image-uploader" action="mail3.php" method="post" enctype="multipart/form-data">
-		
-		<input name="ufiles[]" type="file" id="upload-image" multiple="multiple"></input>
-		<div class="thumbnails drop-area" ></div>
-		<input type="submit" value="Send" />
+	<form class="image-uploader-form" action="image-send.php" method="post" enctype="multipart/form-data">
+		<h2>File uploader</h2>
+		<div class="image-uploader" data-file='{"cropSize": {"w": 150, "h": 100}}'>
+			<div class="upload-btn">
+				Upload Image
+				<input name="uimages[]" type="file" class="upload-image btn" multiple="multiple"></input>
+			</div>
+			<div class="thumbnails drop-area">
+			</div>
+		</div>
+		<h2>File uploader</h2>
+		<div class="image-uploader" data-file='{"insertBefore": ".thumb.file"}'>
+			<div class="thumbnails">
+				<div class="thumb file">
+					<input name="ufiles[]" type="file" class="upload-image" multiple="multiple"></input>
+				</div>
+			</div>
+		</div>
+		<input type="submit" class="submit" value="send" />
 	</form>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" defer></script>
