--- a/dev/index.html
+++ b/dev/index.html
@@ -4,6 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Mail Sending Demo</title>
 	<link rel="stylesheet" href="css/main.css" type="text/css"/>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" defer></script>
+	<script type="text/javascript" src="js/jquery.main.js" defer></script>
 </head>
 <body>
 <div id="page">
@@ -12,7 +14,7 @@
 		<div class="image-uploader" data-file='{"cropSize": {"w": 150, "h": 100}}'>
 			<div class="upload-btn">
 				Upload Image
-				<input name="uimages[]" type="file" class="upload-image btn" multiple="multiple"></input>
+				<input name="uimages[]" type="file" class="upload-image btn" multiple="multiple" />
 			</div>
 			<div class="thumbnails drop-area">
 			</div>
@@ -21,7 +23,7 @@
 		<div class="image-uploader" data-file='{"insertBefore": ".thumb.file"}'>
 			<div class="thumbnails">
 				<div class="thumb file">
-					<input name="ufiles[]" type="file" class="upload-image" multiple="multiple"></input>
+					<input name="ufiles[]" type="file" class="upload-image" multiple="multiple" />
 				</div>
 			</div>
 		</div>
@@ -41,7 +43,5 @@
 		<input type="submit" class="submit" value="send" />
 	</form>
 </div>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" defer></script>
-<script type="text/javascript" src="js/jquery.main.js" defer></script>
 </body>
 </html>
