--- a/dev/index.html
+++ b/dev/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta charset="utf-8">
 	<title>Mail Sending Demo</title>
 	<link rel="stylesheet" href="css/main.css" type="text/css"/>
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" defer></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js" defer></script>
 	<script type="text/javascript" src="js/jquery.main.js" defer></script>
 </head>
 <body>
@@ -35,7 +35,7 @@
 		<div class="image-uploader" data-file='{"cropSize": {"w": 150, "h": 100}, "imageValidator": false}'>
 			<div class="upload-btn">
 				Upload File
-				<input name="ufiles2[]" type="file" class="upload-image btn" multiple="multiple"></input>
+				<input name="ufiles2[]" type="file" class="upload-image btn" multiple="multiple">
 			</div>
 			<div class="thumbnails">
 			</div>
